--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
         </div>
     </nav>
     
-    <header id="mainpage" class="container-fluid d-grid align-items-center" style="overflow:hidden;">
+    <header id="mainpage" class="container-fluid d-grid align-items-center pb-5" style="overflow:hidden;">
 
         <div class="imagezone container d-flex justify-content-around justify-content-md-around" style="overflow:hidden;">
                 <img data-aos="fade-right" data-aos-duration="1000" class="hero shadow" src="image/Sawit.jpg" alt="It's myself"></img>
                 <div data-aos="fade-left" data-aos-duration="1000" class="herotext d-flex flex-column justify-content-center align-items-center mt-4 mt-md-0 ms-md-5 ms-xl-0">
                     <p class="display-3 text-center" style="overflow:hidden;">Hello, I'm <span style="color:#3a6422;">"Sawit"</span></p>
-                    <p class="h4" style="overflow:hidden;">I'm passionate about Web Development.</p>
-                    <p class="h4" style="overflow:hidden;">I'm also interested in Game Development too.</p>
+                    <p class="h4 text-center" style="overflow:hidden;">I'm passionate about Web Development.</p>
+                    <p class="h4 text-center" style="overflow:hidden;">I'm also interested in Game Development too.</p>
                 </div>
         </div>        
     </header>
 
-    <section id="About" class="about pt-5 pb-5">
+    <section id="About" class="about pb-5">
         
             <h1 data-aos="fade-up" data-aos-duration="1000" class="text-center fw-medium mb-5 mt-2" style="overflow:hidden;">About Me</h1>
                 <img data-aos="fade-up" data-aos-duration="1000" src="image/Sawit2.jpg" id="Hero2"/>
-                <div data-aos="zoom-in" data-aos-duration="1000" class="history text-center pt-4">
+                <div data-aos="zoom-in" data-aos-duration="1000" class="history text-center pt-4 container">
                     <p class="h4" style="overflow:hidden;">My name is Sawit Koseeyaumporn. My nickname is Folk. </p>
                     <p class="h4" style="overflow:hidden;">I have been learning Front-end for 3 months. I'm study at CPE KMUTT.</p>
                     <p class="h4" style="overflow:hidden;">I want to improve myself in what I believe.</p>
@@ -263,6 +263,6 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
-  </script>
+</script>
 <script src="script.js"></script>
 </html>
