Updating HTML and CSS file patch 1.04
Fixed contact text from overlapping each other.. (Fixed screen that < 576px to show col-12 for each icons)

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <h1 data-aos="fade-up" data-aos-duration="1000" class="text-center fw-medium mb-5 mt-2" style="overflow:hidden;">About Me</h1>
                 <img data-aos="fade-up" data-aos-duration="1000" src="image/Sawit2.jpg" id="Hero2"/>
                 <div data-aos="zoom-in" data-aos-duration="1000" class="history text-center pt-4 container">
-                    <p class="h4" style="overflow:hidden;">My name is Sawit Koseeyaumporn. My nickname is Folk. </p>
-                    <p class="h4" style="overflow:hidden;">I have been learning Front-end for 3 months. I'm study at CPE KMUTT.</p>
-                    <p class="h4" style="overflow:hidden;">I want to improve myself in what I believe.</p>
-                    <p class="h4" style="overflow:hidden;">I know it's long way to go but I really love to code!</p>
+                    <p class="h4 abouttext" style="overflow:hidden;">My name is Sawit Koseeyaumporn. My nickname is Folk. </p>
+                    <p class="h4 abouttext" style="overflow:hidden;">I have been learning Front-end for 3 months. I'm study at CPE KMUTT.</p>
+                    <p class="h4 abouttext" style="overflow:hidden;">I want to improve myself in what I believe.</p>
+                    <p class="h4 abouttext" style="overflow:hidden;">I know it's long way to go but I really love to code!</p>
                 </div>
     </section>    
 
@@ -216,17 +216,17 @@
         <div class="container d-flex justify-content-center align-items-center">
             <div class="w-100 d-grid mb-2">
                 <div class="row" style="overflow: hidden;">
-                <div class="col-5 box text-center" data-aos="fade-right" data-aos-duration="1000" style="overflow: hidden;">
+                <div class="col-12 col-sm-5 box text-center" data-aos="fade-right" data-aos-duration="1000" style="overflow: hidden;">
                     <i class="fa-solid fa-phone fa-3x contactIcons"></i>
-                    <p>+66864944600</p>
+                    <p class="contactText">+66864944600</p>
                 </div>
-                <div class="col-2 box text-center" data-aos="fade-up" data-aos-duration="1000" style="overflow: hidden;">
+                <div class="col-12 col-sm-2 box text-center" data-aos="fade-up" data-aos-duration="1000" style="overflow: hidden;">
                     <a href="https://github.com/Celesca"><i class="fa-brands fa-github fa-3x contactIcons"></i></a>
-                    <p>Celesca</p>
+                    <p class="contactText">Celesca</p>
                 </div>
-                <div class="col-5 box text-center" data-aos="fade-left" data-aos-duration="1000" style="overflow: hidden;">
+                <div class="col-12 col-sm-5 box text-center" data-aos="fade-left" data-aos-duration="1000" style="overflow: hidden;">
                     <i class="fa-solid fa-envelope fa-3x contactIcons"></i>
-                    <p>folk.sawit@gmail.com</p>
+                    <p class="contactText">folk.sawit@gmail.com</p>
                 </div>
             </div>
             </div>
