Fixed HTML and CSS file patch 1.05
Fixed contact text from overlapping each other.. (Fixed screen that < 576px to show col-12 for each icons)

--- a/index.html
+++ b/index.html
@@ -216,17 +216,17 @@
         <div class="container d-flex justify-content-center align-items-center">
             <div class="w-100 d-grid mb-2">
                 <div class="row" style="overflow: hidden;">
-                <div class="col-5 box text-center" data-aos="fade-right" data-aos-duration="1000" style="overflow: hidden;">
+                <div class="col-12 col-sm-5 box text-center" data-aos="fade-right" data-aos-duration="1000" style="overflow: hidden;">
                     <i class="fa-solid fa-phone fa-3x contactIcons"></i>
-                    <p>+66864944600</p>
+                    <p class="contactText">+66864944600</p>
                 </div>
-                <div class="col-2 box text-center" data-aos="fade-up" data-aos-duration="1000" style="overflow: hidden;">
+                <div class="col-12 col-sm-2 box text-center" data-aos="fade-up" data-aos-duration="1000" style="overflow: hidden;">
                     <a href="https://github.com/Celesca"><i class="fa-brands fa-github fa-3x contactIcons"></i></a>
-                    <p>Celesca</p>
+                    <p class="contactText">Celesca</p>
                 </div>
-                <div class="col-5 box text-center" data-aos="fade-left" data-aos-duration="1000" style="overflow: hidden;">
+                <div class="col-12 col-sm-5 box text-center" data-aos="fade-left" data-aos-duration="1000" style="overflow: hidden;">
                     <i class="fa-solid fa-envelope fa-3x contactIcons"></i>
-                    <p>folk.sawit@gmail.com</p>
+                    <p class="contactText">folk.sawit@gmail.com</p>
                 </div>
             </div>
             </div>
