--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top position-fixed" id="mynav">
         <div class="container">
-            <a onClick="scrollToTarget('mainpage')" class="navbar-brand fs-3 shadow border rounded-2 pe-2 rounded-circle border-success bg-success" id="brandname"><i class="fa-solid fa-mountain-sun mx-2"></i>Celesca</a>
+            <a onClick="scrollToTarget('mainpage')" class="navbar-brand navbar-content fs-3 pe-2" style="color: #F64C71;" id="brandname"><i class="fa-solid fa-mountain-sun mx-2"></i>Celesca</a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -47,9 +47,9 @@
         <div class="imagezone container d-flex justify-content-around justify-content-md-around" style="overflow:hidden;">
                 <img data-aos="fade-right" data-aos-duration="1000" class="hero shadow" src="image/Sawit.jpg" alt="It's myself"></img>
                 <div data-aos="fade-left" data-aos-duration="1000" class="herotext d-flex flex-column justify-content-center align-items-center mt-4 mt-md-0 ms-md-5 ms-xl-0">
-                    <p class="display-3 text-center" style="overflow:hidden;">Hello, I'm <span style="color:#3a6422;">"Sawit"</span></p>
-                    <p class="h4 text-center" style="overflow:hidden;">I'm passionate about Web Development.</p>
-                    <p class="h4 text-center" style="overflow:hidden;">I'm also interested in Game Development too.</p>
+                    <p class="display-3 text-center" style="overflow:hidden;">Hello, I'm <span id="heroname">Sawit</span></p>
+                    <p class="h4 text-center" style="overflow:hidden;">I'm passionate about <span class="herosub">Web Development</span></p>
+                    <p class="h4 text-center" style="overflow:hidden;">I'm also interested in <span class="herosub">Game Development</span> too</p>
                 </div>
         </div>        
     </header>
@@ -59,7 +59,7 @@
             <h1 data-aos="fade-up" data-aos-duration="1000" class="text-center fw-medium mb-5 mt-2" style="overflow:hidden;">About Me</h1>
                 <img data-aos="fade-up" data-aos-duration="1000" src="image/Sawit2.jpg" id="Hero2"/>
                 <div data-aos="zoom-in" data-aos-duration="1000" class="history text-center pt-4 container">
-                    <p class="h4" style="overflow:hidden;">My name is Sawit Koseeyaumporn. My nickname is Folk. </p>
+                    <p class="h4" style="overflow:hidden;">My name is Sawit Koseeyaumporn. My nickname is <span style="color: aquamarine;">Folk.</span> </p>
                     <p class="h4" style="overflow:hidden;">I have been learning Front-end for 3 months. I'm study at CPE KMUTT.</p>
                     <p class="h4" style="overflow:hidden;">I want to improve myself in what I believe.</p>
                     <p class="h4" style="overflow:hidden;">I know it's long way to go but I really love to code!</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000"
                 class="col-7 mb-4 d-flex flex-column align-items-center justify-content-center education-text">
-                    <p class="h2 fw-medium text-center" style="overflow-y:hidden;">Sarasas Pittaya School</p>
+                    <p class="h2 fw-medium text-center education-head-text" style="overflow-y:hidden;">Sarasas Pittaya School</p>
                     <p class="h4 fw-light text-center" style="overflow-y:hidden;">Primary School</p>
                     <p class="h3 text-center" style="overflow-y:hidden;">2007 - 2015</p>
                 </div>
@@ -89,7 +89,7 @@
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000"
                 class="col-7 mb-4 d-flex flex-column align-items-center justify-content-center education-text">
-                    <p class="h2 fw-medium text-center" style="overflow: hidden;">Wat Suthiwararam School</p>
+                    <p class="h2 fw-medium text-center education-head-text" style="overflow: hidden;">Wat Suthiwararam School</p>
                     <p class="h4 fw-light text-center" style="overflow: hidden;">Gifted Math-Sci Program</p>
                     <p class="h3 text-center" style="overflow: hidden;">2016 - 2021</p>
                 </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000"
                 class="col-7 mt-3 mb-2 pb-4 d-flex flex-column align-items-center justify-content-center education-text">
-                    <p class="h2 fw-medium text-center" style="overflow: hidden;">King Mongkut's University of Technology Thonburi</p>
+                    <p class="h2 fw-medium text-center education-head-text" style="overflow: hidden;">King Mongkut's University of Technology Thonburi</p>
                     <p class="h4 fw-light text-center" style="overflow: hidden;">Computer Engineering</p>
                     <p class="h3 text-center" style="overflow: hidden;">2022 - Present</p>
                 </div>
@@ -113,30 +113,40 @@
             <h1 data-aos="zoom-out" data-aos-duration="1200" class="text-center fw-medium mt-2" style="overflow:hidden;">My Skills</h1>
             <!-- Front-end Developer Skills -->
                     <div class="container mt-3 pt-5 pb-1"  style="overflow: hidden;" data-aos="fade-up" data-aos-duration="1000">
-                        <p class="text-center h3 pb-5" style="overflow: hidden;">Front-end Developer Skills</p>
-                        <div class="row">
+                        <p class="text-center h3 pb-5 skill-head-text" style="overflow: hidden; color:white;">Front-end Developer Skills</p>
+                        <div class="row" style="overflow: hidden;" data-aos="fade-up" data-aos-duration="1000">
+
                             <div class="col-md-4 col-sm-4 col-4 text-center mb-4">
-                                <i class="fa-brands fa-html5 fa-4x mb-2 pop" style="color:rgb(241,101,41);"></i>
-                                <h3 style="overflow:hidden;">HTML</h3>
-                                <p></p>
+                                <div class="skill-box">
+                                    <i class="fa-brands fa-html5 fa-4x mb-2 pop" style="color:rgb(241,101,41);"></i>
+                                    <h3 style="overflow:hidden;">HTML</h3>
+                                </div>
                             </div>
                             <div class="col-md-4 col-sm-4 col-4 text-center mb-4">
-                                <i class="fa-brands fa-css3-alt fa-4x mb-2" style="color:rgb(36,101,241);"></i>
-                                <h3 style="overflow:hidden;">CSS</h3>
+                                <div class="skill-box">
+                                    <i class="fa-brands fa-css3-alt fa-4x mb-2" style="color:rgb(36,101,241);"></i>
+                                    <h3 style="overflow:hidden;">CSS</h3>
+                                </div>
                             </div>
                             <div class="col-md-4 col-sm-4 col-4 text-center mb-4">
-                                <i class="fa-brands fa-js-square fa-4x mb-2" style="color:rgb(247,223,30);"></i>
-                                <h3 style="overflow:hidden;">JavaScript</h3>
+                                <div class="skill-box">
+                                    <i class="fa-brands fa-js-square fa-4x mb-2" style="color:rgb(247,223,30);"></i>
+                                    <h3 style="overflow:hidden;">JavaScript</h3>
+                                </div>
                             </div>
                         </div>
                         <div class="row" style="overflow: hidden;" data-aos="fade-up" data-aos-duration="1000">
                             <div class="col-md-6 col-sm-6 col-6 text-center mb-4">
-                                <i class="fa-brands fa-bootstrap fa-4x mb-2" style="color:rgb(136,10,251);"></i>
-                                <h3 style="overflow:hidden;">Bootstrap 5</h3>
+                                <div class="skill-box">
+                                    <i class="fa-brands fa-bootstrap fa-4x mb-2" style="color:rgb(136,10,251);"></i>
+                                    <h3 style="overflow:hidden;">Bootstrap 5</h3>
+                                </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-6 text-center mb-4">
-                                <i class="fa-brands fa-react fa-4x mb-2" style="color:rgb(97,219,251);"></i>
-                                <h3 style="overflow:hidden;">React.js</h3>
+                                <div class="skill-box">
+                                    <i class="fa-brands fa-react fa-4x mb-2" style="color:rgb(97,219,251);"></i>
+                                    <h3 style="overflow:hidden;">React.js</h3>
+                                </div>
                             </div>
 
                         </div>
@@ -146,19 +156,25 @@
                     </div>
                     <!-- Programming -->
                     <div class="container mt-3 pt-5 pb-3" style="overflow: hidden;" data-aos="fade-up" data-aos-duration="1000">
-                        <p class="text-center h3 fw-medium pb-4" style="overflow: hidden;">Other Skills</p>
+                        <p class="text-center h3 fw-medium pb-4 skill-head-text" style="overflow: hidden; color:white;">Other Skills</p>
                         <div class="row">
                             <div class="col-md-4 col-sm-4 col-4 text-center mb-4">
+                                <div class="skill-box">
                                 <img src="image/python_logo.svg" class="mb-2" id="pythonimage"></i>
                                 <h3 style="overflow:hidden;">Python</h3>
                             </div>
-                            <div class="col-md-4 col-sm-4 col-4 text-center mb-4">
-                                <img src="image/C++_logo.svg" class="mb-2" id="Cppimage"></img>
-                                <h3 style="overflow:hidden;">C Language</h3>
                             </div>
                             <div class="col-md-4 col-sm-4 col-4 text-center mb-4">
-                                <i class="fa-brands fa-unity fa-4x mb-2"></i>
-                                <h3 style="overflow:hidden;">Unity</h3>
+                                <div class="skill-box">
+                                <img src="image/C++_logo.svg" class="mb-2" id="Cppimage"></img>
+                                <h3 style="overflow:hidden;">C Language</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-4 text-center mb-4">
+                                <div class="skill-box">
+                                    <i class="fa-brands fa-unity fa-4x mb-2"></i>
+                                    <h3 style="overflow:hidden;">Unity</h3>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -166,8 +182,8 @@
             </div>
         </section>
 
-
-    <section class="work container py-5" id="Project" style="overflow: hidden;">
+    <section id="work">
+    <div class="container py-5" id="Project" style="overflow: hidden;">
         <h1 class="text-center mb-5" style="overflow: hidden;" data-aos="zoom-in">My Projects</h1>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-xl-6 col-xxl-6 text-center mb-4">
@@ -209,10 +225,11 @@
                 </div>
             </div>
         </div>
+    </div>
     </section>
 
     <section id="Contact">
-        <h1 class="text-center pb-3" data-aos="zoom-in-down">Contact</h1>
+        <h1 class="text-center pb-3 mb-2" data-aos="zoom-in-down">Contact</h1>
         <div class="container d-flex justify-content-center align-items-center">
             <div class="w-100 d-grid mb-2">
                 <div class="row" style="overflow: hidden;">
@@ -233,23 +250,27 @@
             
         </div>
         <div class="pt-4 mb-3">
-            <h1 class="text-center pb-3 h4" style="overflow: hidden;" data-aos="zoom-in-right">Or send me the message directly below here</h1>
+            <h4 class="text-center pb-3 h4" style="overflow: hidden; color:aquamarine; text-shadow: 2px 2px rgb(12, 88, 63)" data-aos="zoom-in-right">Or send me the message directly below here</h4>
             <form class="form-container" align="center" data-aos="zoom-in-right">
             <div class="mb-3 text-start">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control shadow-sm" id="exampleInputEmail1">
             </div>
             <div class="mb-3 text-start">
-              <label for="exampleInputPassword1" class="form-label">Message</label>
+              <label for="exampleInputPassword1" class="form-label">Name</label>
               <input type="text" class="form-control shadow-sm" id="exampleInputPassword1">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="mb-3 text-start">
+                <label for="exampleInputPassword1" class="form-label">Message</label>
+                <input type="text" class="form-control shadow-sm" id="exampleInputPassword1">
+              </div>
+            <button class="btn btn-primary" onclick="Submit()">Submit</button>
           </form>
         </div>
     </section>
 
 
-    <footer class="text-center p-4">
+    <footer class="copyright text-center pt-3">
         <div class="container">
             <div class="row">
                 <div class="col">
